bynkc/tests/fixtures/negative/177_kv_list_wrong_platform/src/bad/scan.karn
context bad.scan

consumes karn.cloudflare { Kv }

service scan {
  on call(prefix: String) -> Effect[Result[List[String], ()]] given Kv {
    let keys <- Kv.list(Some(prefix))
    Ok(keys)
  }
}
